package btd.utils;

/**
 * Provides constant values for different attributes of bloons in the tower defense game.
 * The BloonValues class contains static final fields for health, speed, and money associated with various types of bloons.
 */
public final class BloonValues {

    /**
     * The default health value for a red bloon.
     */
    public static final int RED_BLOON_HEALTH = 10;

    /**
     * The default speed value for a red bloon.
     */
    public static final double RED_BLOON_SPEED = 10;

    /**
     * The default money value gained when a red bloon is defeated.
     */
    public static final int RED_BLOON_MONEY = 30;

    /**
     * The default health value for a blue bloon.
     */
    public static final int BLUE_BLOON_HEALTH = 20;

    /**
     * The default speed value for a blue bloon.
     */
    public static final double BLUE_BLOON_SPEED = 20;

    /**
     * The default money value gained when a blue bloon is defeated.
     */
    public static final int BLUE_BLOON_MONEY = 30;

    /**
     * The default health value for a black bloon.
     */
    public static final int BLACK_BLOON_HEALTH = 30;

    /**
     * The default speed value for a black bloon.
     */
    public static final double BLACK_BLOON_SPEED = 30;

    /**
     * The default money value gained when a black bloon is defeated.
     */
    public static final int BLACK_BLOON_MONEY = 30;

    /**
     * Private constructor to prevent instantiation of the class.
     */
    private BloonValues() {
    }
}

