package btd.utils;

public enum Direction {
    UP,
    DOWN,
    RIGHT,
    LEFT
}

